Распознавание еды по фото
Реализовал 3 случая обработки: на фото еда, на фото не еда, шанс что на фото еда <= 50%

--- a/templates/meal.html
+++ b/templates/meal.html
@@ -13,5 +13,5 @@
 <b>Вероятные ингредиенты</b>
 <br><br>
 {% for ingredient in likely_ingredients %}
-• {{ ingredient }}<br>
+• {{ ingredient.name }} ({{ ingredient.grams }}г, {{ ingredient.calories }}ккал)<br>
 {% endfor %}
